--- a/Project/hareBox/hareBoxClient/src/loginScene.fxml
+++ b/Project/hareBox/hareBoxClient/src/loginScene.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="loginPane" minHeight="350.0" minWidth="350.0" prefHeight="350.0" prefWidth="350.0" style="-fx-background-color: #000060;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hareBoxClient.LoginSceneController">
+<AnchorPane fx:id="loginPane" minHeight="350.0" minWidth="350.0" prefHeight="350.0" prefWidth="350.0" style="-fx-background-color: #000060;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LoginSceneController">
    <children>
       <GridPane alignment="CENTER" layoutX="20.0" layoutY="20.0" prefHeight="279.0" prefWidth="256.0" style="-fx-alignment: CENTER;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <columnConstraints>
@@ -30,7 +30,7 @@
          <children>
             <ImageView fx:id="logoImg" fitHeight="79.0" fitWidth="226.0" pickOnBounds="true" preserveRatio="true" GridPane.columnSpan="2" GridPane.halignment="CENTER">
                <image>
-                  <Image url="@resources/hareBoxLogo.png" />
+                  <Image url="@../../resources/hareBoxLogo.png" />
                </image>
             </ImageView>
             <Separator prefHeight="20.0" prefWidth="256.0" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.valignment="TOP">
